--- a/templates/about.html
+++ b/templates/about.html
@@ -75,8 +75,8 @@
           >
             <div class="col-lg-6">
               <div class="about-text">
-                <h3 class="dark-color">Do some awsome stuff with me.</h3>
-                <h4 class="theme-color">Django Backend Developer</h4>
+                <h3 class="dark-color">Do some awesome stuff with me.</h3>
+                <h4 class="theme-color">Full Stack Web Developer</h4>
                 <p>
                   I design and develop amazing websites for customers of various
                   designs, specializing in creating stylish, modern websites,
@@ -90,9 +90,7 @@
                   services and online stores.
                 </p> -->
                 <div class="btn-bar">
-                  <a class="px-btn theme" href="http://127.0.0.1:8000/project"
-                    >View Works</a
-                  >
+                  <a class="px-btn theme" href="#project">View Works</a>
                   <!-- <a class="px-btn theme-t" href="#">Download CV</a> -->
                 </div>
               </div>
