--- a/templates/home.html
+++ b/templates/home.html
@@ -152,7 +152,7 @@
               <p class="card-text">
                 Encrypting User Passwords to avoid third party attacks
               </p>
-              <a href="#" class="btn btn-primary">Source Code</a>
+              <!-- <a href="#" class="btn btn-primary">Source Code</a> -->
             </div>
           </div>
         </div>
@@ -166,11 +166,11 @@
             <div class="card-body">
               <h5 class="card-title">Machine Learning</h5>
               <p class="card-text">Predict the Selling Price for Old car.</p>
-              <a
+              <!-- <a
                 href="https://github.com/manthanp1012/Car_Price_Prediction/tree/master"
                 class="btn btn-primary"
                 >Source Code</a
-              >
+              > -->
             </div>
           </div>
         </div>
@@ -186,7 +186,7 @@
               <p class="card-text">
                 Able to predict the weather conditions of different cities
               </p>
-              <a href="#" class="btn btn-primary">Source Code</a>
+              <!-- <a href="#" class="btn btn-primary">Source Code</a> -->
             </div>
           </div>
         </div>
