--- a/templates/project.html
+++ b/templates/project.html
@@ -81,7 +81,11 @@
               <p class="card-text">
                 Encrypting User Passwords to avoid third party attacks
               </p>
-              <a href="#" class="btn btn-primary">Source Code</a>
+              <a
+                href="https://github.com/manthanp1012/Cryptography"
+                class="btn btn-primary"
+                >Source Code</a
+              >
             </div>
           </div>
         </div>
@@ -115,7 +119,11 @@
               <p class="card-text">
                 Able to predict the weather conditions of different cities
               </p>
-              <a href="#" class="btn btn-primary">Source Code</a>
+              <a
+                href="https://github.com/manthanp1012/API_Weather_Temperature"
+                class="btn btn-primary"
+                >Source Code</a
+              >
             </div>
           </div>
         </div>
