--- a/templates/about.html
+++ b/templates/about.html
@@ -90,7 +90,9 @@
                   services and online stores.
                 </p> -->
                 <div class="btn-bar">
-                  <a class="px-btn theme" href="#project">View Works</a>
+                  <a class="px-btn theme" href="{% url 'project' %}"
+                    >View Works</a
+                  >
                   <!-- <a class="px-btn theme-t" href="#">Download CV</a> -->
                 </div>
               </div>
