--- a/templates/contact.html
+++ b/templates/contact.html
@@ -99,6 +99,8 @@
             class="form-control"
             id="phone"
             name="phone"
+            cols="10"
+            rows="1"
             aria-describedby="phoneHelp"
           />
         </div>
