--- a/templates/about.html
+++ b/templates/about.html
@@ -90,7 +90,7 @@
                   services and online stores.
                 </p> -->
                 <div class="btn-bar">
-                  <a class="px-btn theme" href="{% url 'project' %}"
+                  <a class="btn btn-secondary btn-danger" href="{% url 'project' %}"
                     >View Works</a
                   >
                   <!-- <a class="px-btn theme-t" href="#">Download CV</a> -->
