--- a/templates/about.html
+++ b/templates/about.html
@@ -90,10 +90,16 @@
                   services and online stores.
                 </p> -->
                 <div class="btn-bar">
-                  <a class="btn btn-secondary btn-danger" href="{% url 'project' %}"
+                  <a
+                    class="btn btn-secondary btn-danger"
+                    href="{% url 'project' %}"
                     >View Works</a
                   >
-                  <!-- <a class="px-btn theme-t" href="#">Download CV</a> -->
+                  <a
+                    class="btn btn-secondary btn-danger"
+                    href="Manthan_CV_intermediate.pdf"
+                    >Download CV</a
+                  >
                 </div>
               </div>
             </div>
