--- a/templates/contact.html
+++ b/templates/contact.html
@@ -106,13 +106,7 @@
         </div>
         <div class="form-group">
           <label for="concern">Concern:</label><br />
-          <textarea
-            name="concern"
-            id="concern"
-            name="concern"
-            cols="148"
-            rows="10"
-          ></textarea>
+          <textarea name="concern" id="concern" name="concern"></textarea>
         </div>
         <div class="form-group form-check">
           <input
