--- a/templates/about.html
+++ b/templates/about.html
@@ -97,7 +97,7 @@
                   >
                   <a
                     class="btn btn-secondary btn-danger"
-                    href="Manthan_CV_intermediate.pdf"
+                    href="./Manthan_CV_intermediate.pdf"
                     >Download CV</a
                   >
                 </div>
