--- a/templates/contact.html
+++ b/templates/contact.html
@@ -106,7 +106,13 @@
         </div>
         <div class="form-group">
           <label for="concern">Concern:</label><br />
-          <textarea name="concern" id="concern" name="concern"></textarea>
+          <textarea
+            name="concern"
+            id="concern"
+            name="concern"
+            cols="148"
+            rows="5"
+          ></textarea>
         </div>
         <div class="form-group form-check">
           <input
