--- a/templates/home.html
+++ b/templates/home.html
@@ -70,7 +70,8 @@
       role="alert"
     >
       <strong>Hey Visitor!</strong> If you like my portfolio then do check out
-      my work on github.
+      my work on
+      <strong><a href="https://github.com/manthanp1012">github</a></strong>
       <button
         type="button"
         class="close"
