--- a/templates/contact.html
+++ b/templates/contact.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="container-fluid px-0">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-success px-5">
         <a class="navbar-brand" href="#">Manthan Patil</a>
         <button
           class="navbar-toggler"
@@ -35,20 +35,24 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav ml-auto px-5 my-1">
             <li class="nav-item">
-              <a class="nav-link" href="/home"
+              <a class="nav-link mr-3 text-uppercase" href="/home"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about">About</a>
+              <a class="nav-link mr-3 text-uppercase" href="/about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/project">Projects</a>
+              <a class="nav-link mr-3 text-uppercase" href="/project"
+                >Projects</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/contact">Contact</a>
+              <a class="nav-link active text-uppercase" href="/contact"
+                >Contact</a
+              >
             </li>
           </ul>
           <!-- <form class="form-inline my-2 my-lg-0">
@@ -66,7 +70,8 @@
       </nav>
     </div>
     <div class="container my-3">
-      <h2 class="text-center my-3">Contact Me</h2>
+      <h2 class="text-center my-3"><ins>Contact Me</ins></h2>
+      <br />
 
       <form method="POST" action="{% url 'contact' %}">
         {% csrf_token %}
@@ -78,7 +83,6 @@
             id="name"
             name="name"
             aria-describedby="nameHelp"
-            placeholder="e.g.John Snow"
           />
         </div>
         <div class="form-group">
@@ -89,7 +93,6 @@
             id="email"
             name="email"
             aria-describedby="emailHelp"
-            placeholder="e.g.johnsnow@got.in"
           />
         </div>
         <div class="form-group">
@@ -128,7 +131,7 @@
         <button
           onclick="greet()"
           type="submit"
-          class="btn btn-secondary btn-danger"
+          class="btn btn-primary btn-success"
         >
           Submit
         </button>
@@ -192,7 +195,7 @@
       <!-- Copyright -->
       <div class="footer-copyright text-center py-3">
         © 2022 Copyright:
-        <a>Manthan Patil</a>
+        <a><strong>Manthan Patil</strong></a>
       </div>
       <!-- Copyright -->
     </footer>
