--- a/templates/project.html
+++ b/templates/project.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="container-fluid px-0">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-success px-5">
         <a class="navbar-brand" href="#">Manthan Patil</a>
         <button
           class="navbar-toggler"
@@ -35,20 +35,22 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav ml-auto px-5 my-1">
             <li class="nav-item">
-              <a class="nav-link" href="/home"
+              <a class="nav-link mr-3 text-uppercase" href="/home"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about">About</a>
+              <a class="nav-link mr-3 text-uppercase" href="/about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/project">Projects</a>
+              <a class="nav-link active mr-3 text-uppercase" href="/project"
+                >Projects</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact">Contact</a>
+              <a class="nav-link text-uppercase" href="/contact">Contact</a>
             </li>
           </ul>
           <!-- <form class="form-inline my-2 my-lg-0">
@@ -67,7 +69,10 @@
     </div>
 
     <div class="container my-0">
-      <h2 class="cardtitle text-center my-3 py-3">My Recent Projects</h2>
+      <h2 class="cardtitle text-center my-3 py-3">
+        <ins>Recent Projects</ins>
+      </h2>
+      <br />
       <div class="row">
         <div class="col-md-4">
           <div class="card" style="width: 18rem">
@@ -77,13 +82,13 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Cryptography Project</h5>
+              <h5 class="card-title">Cryptography</h5>
               <p class="card-text">
                 Encrypting User Passwords to avoid third party attacks
               </p>
               <a
                 href="https://github.com/manthanp1012/Cryptography"
-                class="btn btn-primary"
+                class="btn btn-primary btn-success"
                 >Source Code</a
               >
             </div>
@@ -101,7 +106,7 @@
               <p class="card-text">Predict the Selling Price for Old car.</p>
               <a
                 href="https://github.com/manthanp1012/Car_Price_Prediction/tree/master"
-                class="btn btn-primary"
+                class="btn btn-primary btn-success"
                 >Source Code</a
               >
             </div>
@@ -121,7 +126,7 @@
               </p>
               <a
                 href="https://github.com/manthanp1012/API_Weather_Temperature"
-                class="btn btn-primary"
+                class="btn btn-primary btn-success"
                 >Source Code</a
               >
             </div>
@@ -187,7 +192,7 @@
       <!-- Copyright -->
       <div class="footer-copyright text-center py-3">
         © 2022 Copyright:
-        <a>Manthan Patil</a>
+        <a><strong>Manthan Patil</strong></a>
       </div>
       <!-- Copyright -->
     </footer>
