--- a/templates/about.html
+++ b/templates/about.html
@@ -79,6 +79,14 @@
           <div
             class="row align-items-center justify-content-around flex-row-reverse"
           >
+            <div class="col-lg-5 text-center">
+              <div class="about-img">
+                <img
+                  src="https://media-exp1.licdn.com/dms/image/C5603AQHlNVFFSAMmdQ/profile-displayphoto-shrink_800_800/0/1633153473666?e=1665619200&v=beta&t=WA8MoE32CzHDnefJGTkj1ks-t1hBbmPD-KjN0AjBFHE"
+                  alt="Manthan.jpg"
+                />
+              </div>
+            </div>
             <div class="col-lg-6">
               <div class="about-text">
                 <h3 class="dark-color">Do some awesome stuff with me.</h3>
@@ -108,15 +116,8 @@
                     href="https://www.linkedin.com/in/manthan-patil-59b5a8222/"
                     >Visit LinkedIn</a
                   >
+                  <br />
                 </div>
-              </div>
-            </div>
-            <div class="col-lg-5 text-center">
-              <div class="about-img">
-                <img
-                  src="https://media-exp1.licdn.com/dms/image/C5603AQHlNVFFSAMmdQ/profile-displayphoto-shrink_800_800/0/1633153473666?e=1665619200&v=beta&t=WA8MoE32CzHDnefJGTkj1ks-t1hBbmPD-KjN0AjBFHE"
-                  alt="Manthan.jpg"
-                />
               </div>
             </div>
           </div>
@@ -179,7 +180,7 @@
     <!--Footer starts-->
 
     <!-- Footer -->
-    <footer class="page-footer font-small dark-color darken-3">
+    <footer class="page-footer font-small cyan darken-3">
       <!-- Footer Elements -->
       <div class="container">
         <!-- Grid row-->
