--- a/templates/about.html
+++ b/templates/about.html
@@ -83,6 +83,7 @@
               <div class="about-img">
                 <img
                   src="https://media-exp1.licdn.com/dms/image/C5603AQHlNVFFSAMmdQ/profile-displayphoto-shrink_800_800/0/1633153473666?e=1665619200&v=beta&t=WA8MoE32CzHDnefJGTkj1ks-t1hBbmPD-KjN0AjBFHE"
+                  class="img-thumbnail img-rounded"
                   alt="Manthan.jpg"
                 />
                 <br />
@@ -91,8 +92,9 @@
             <br /><br />
             <div class="col-lg-6">
               <div class="about-text">
-                <h3 class="dark-color">Do some awesome stuff with me.</h3>
-                <h4 class="theme-color">DApps & Web Developer | Freelancer</h4>
+                <br /><br />
+                <!-- <h3 class="dark-color">Do some awesome stuff with me.</h3> -->
+                <h3 class="theme-color">DApps & Web Developer | Freelancer</h3>
                 <p>
                   I design and develop amazing websites for customers of various
                   designs, specializing in creating stylish, modern websites,
