--- a/templates/home.html
+++ b/templates/home.html
@@ -68,7 +68,7 @@
       </nav>
     </div>
     <div
-      class="alert alert-success alert-dismissible fade show my-0"
+      class="alert alert-danger alert-dismissible fade show my-0"
       role="alert"
     >
       <strong>Hey Visitor!</strong> check out my work on
@@ -88,7 +88,7 @@
     </div>
     <div
       id="carouselExampleIndicators"
-      class="carousel slide"
+      class="carousel slide bg-info"
       data-ride="carousel"
     >
       <ol class="carousel-indicators">
@@ -143,8 +143,8 @@
       </a>
     </div>
 
-    <div class="container my-0">
-      <h2 class="cardtitle text-center my-3 py-3">
+    <div class="container-fluid my-0 py-1 bg-info">
+      <h2 class="cardtitle text-center my-3 py-3 mr-5">
         <ins
           ><a class="text-dark bg-light" href="/project"
             >Recent Projects</a
@@ -152,12 +152,12 @@
         >
       </h2>
       <br />
-      <div class="row">
+      <div class="row img-rounded img-circle">
         <div class="col-md-4">
-          <div class="card" style="width: 18rem">
+          <div class="card" style="width: 26rem">
             <img
               src="https://source.unsplash.com/300x150/?cryptography,encryption"
-              class="card-img-top"
+              class="card-img-top image-aline-center"
               alt="..."
             />
             <div class="card-body">
@@ -170,15 +170,18 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card" style="width: 18rem">
+          <div class="card" style="width: 26rem">
             <img
               src="https://source.unsplash.com/300x150/?machinelearning,datascience"
-              class="card-img-top"
+              class="card-img-top image-aline-center"
               alt="..."
             />
             <div class="card-body">
               <h5 class="card-title">Machine Learning</h5>
-              <p class="card-text">Predict the Selling Price for Old car.</p>
+              <p class="card-text">
+                Predict the Selling Price for Old car based on purchase price
+                and fuel type and more.
+              </p>
               <!-- <a
                 href="https://github.com/manthanp1012/Car_Price_Prediction/tree/master"
                 class="btn btn-primary"
@@ -188,10 +191,10 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card" style="width: 18rem">
+          <div class="card" style="width: 26rem">
             <img
               src="https://source.unsplash.com/300x150/?API,temperature,weather"
-              class="card-img-top"
+              class="card-img-top image-aline-center"
               alt="..."
             />
             <div class="card-body">
@@ -208,7 +211,7 @@
     <!--Footer starts-->
 
     <!-- Footer -->
-    <footer class="page-footer font-small cyan darken-3">
+    <footer class="page-footer font-small cyan darken-3 bg-info">
       <!-- Footer Elements -->
       <div class="container">
         <!-- Grid row-->
