--- a/templates/about.html
+++ b/templates/about.html
@@ -19,7 +19,7 @@
     <title>About</title>
   </head>
   <body>
-    <div class="container-fluid px-0">
+    <div class="container-fluid px-0 py-0">
       <nav class="navbar navbar-expand-lg navbar-dark bg-success px-5">
         <a class="navbar-brand" href="#">Manthan Patil</a>
         <button
@@ -71,7 +71,7 @@
       </nav>
     </div>
 
-    <div class="container my-0">
+    <div class="container-fluid my-0 py-1 bg-info">
       <h2 class="cardtitle text-center my-3 py-3"><ins>About Me</ins></h2>
       <br />
       <section class="section about-section gray-bg" id="about">
@@ -84,7 +84,6 @@
                 <img
                   src="https://media-exp1.licdn.com/dms/image/C5603AQHlNVFFSAMmdQ/profile-displayphoto-shrink_800_800/0/1633153473666?e=1665619200&v=beta&t=WA8MoE32CzHDnefJGTkj1ks-t1hBbmPD-KjN0AjBFHE"
                   class="img-thumbnail img-rounded"
-                  alt="Manthan.jpg"
                 />
                 <br />
               </div>
@@ -184,7 +183,7 @@
     <!--Footer starts-->
 
     <!-- Footer -->
-    <footer class="page-footer font-small cyan darken-3">
+    <footer class="page-footer font-small cyan darken-3 bg-info">
       <!-- Footer Elements -->
       <div class="container">
         <!-- Grid row-->
