--- a/templates/contact.html
+++ b/templates/contact.html
@@ -69,7 +69,7 @@
         </div>
       </nav>
     </div>
-    <div class="container my-3">
+    <div class="container-fluid py-1 bg-light">
       <h2 class="text-center my-3"><ins>Contact Me</ins></h2>
       <br />
 
@@ -137,11 +137,7 @@
         </button>
       </form>
     </div>
-
-    <!--Footer starts-->
-
-    <!-- Footer -->
-    <footer class="page-footer font-small cyan darken-3">
+    <footer class="page-footer font-small cyan darken-3 bg-light">
       <!-- Footer Elements -->
       <div class="container">
         <!-- Grid row-->
