--- a/templates/project.html
+++ b/templates/project.html
@@ -68,17 +68,17 @@
       </nav>
     </div>
 
-    <div class="container my-0">
+    <div class="container-fluid py-1 my-0 bg-info">
       <h2 class="cardtitle text-center my-3 py-3">
         <ins>Recent Projects</ins>
       </h2>
       <br />
       <div class="row">
         <div class="col-md-4">
-          <div class="card" style="width: 18rem">
+          <div class="card" style="width: 26rem">
             <img
               src="https://source.unsplash.com/300x150/?cryptography,encryption"
-              class="card-img-top"
+              class="card-img-top image-aline-center"
               alt="..."
             />
             <div class="card-body">
@@ -95,15 +95,18 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card" style="width: 18rem">
+          <div class="card" style="width: 26rem">
             <img
               src="https://source.unsplash.com/300x150/?machinelearning,datascience"
-              class="card-img-top"
+              class="card-img-top image-aline-center"
               alt="..."
             />
             <div class="card-body">
               <h5 class="card-title">Machine Learning</h5>
-              <p class="card-text">Predict the Selling Price for Old car.</p>
+              <p class="card-text">
+                Predict the Selling Price for Old car based on purchase price
+                and fuel type and more.
+              </p>
               <a
                 href="https://github.com/manthanp1012/Car_Price_Prediction/tree/master"
                 class="btn btn-primary btn-success"
@@ -113,10 +116,10 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card" style="width: 18rem">
+          <div class="card" style="width: 26rem">
             <img
               src="https://source.unsplash.com/300x150/?API,temperature,weather"
-              class="card-img-top"
+              class="card-img-top image-aline-center"
               alt="..."
             />
             <div class="card-body">
@@ -138,7 +141,7 @@
     <!--Footer starts-->
 
     <!-- Footer -->
-    <footer class="page-footer font-small cyan darken-3">
+    <footer class="page-footer font-small cyan darken-3 bg-info">
       <!-- Footer Elements -->
       <div class="container">
         <!-- Grid row-->
