--- a/templates/contact.html
+++ b/templates/contact.html
@@ -109,14 +109,10 @@
         </div>
         <div class="form-group">
           <label for="concern">Concern:</label><br />
-          <textarea
-            name="concern"
-            id="concern"
-            name="concern"
-            cols="148"
-            rows="5"
-          ></textarea>
+          <textarea name="concern" id="concern" name="concern"></textarea>
         </div>
+        <!-- cols="148"
+            rows="5"-->
         <div class="form-group form-check">
           <input
             type="checkbox"
