--- a/templates/home.html
+++ b/templates/home.html
@@ -154,7 +154,7 @@
       <br />
       <div class="row img-rounded img-circle">
         <div class="col-md-4">
-          <div class="card" style="width: 21rem">
+          <div class="card" style="width: 22rem">
             <img
               src="https://source.unsplash.com/300x150/?cryptography,encryption"
               class="card-img-top image-aline-center"
@@ -169,8 +169,9 @@
             </div>
           </div>
         </div>
+        <br />
         <div class="col-md-4">
-          <div class="card" style="width: 21rem">
+          <div class="card" style="width: 22rem">
             <img
               src="https://source.unsplash.com/300x150/?machinelearning,datascience"
               class="card-img-top image-aline-center"
@@ -180,7 +181,7 @@
               <h5 class="card-title">Machine Learning</h5>
               <p class="card-text">
                 Predict the Selling Price for Old car based on purchase price
-                and fuel type and more.
+                and fuel type.
               </p>
               <!-- <a
                 href="https://github.com/manthanp1012/Car_Price_Prediction/tree/master"
@@ -190,8 +191,9 @@
             </div>
           </div>
         </div>
+        <br />
         <div class="col-md-4">
-          <div class="card" style="width: 21rem">
+          <div class="card" style="width: 22rem">
             <img
               src="https://source.unsplash.com/300x150/?API,temperature,weather"
               class="card-img-top image-aline-center"
