--- a/templates/project.html
+++ b/templates/project.html
@@ -75,7 +75,7 @@
       <br />
       <div class="row">
         <div class="col-md-4">
-          <div class="card" style="width: 21rem">
+          <div class="card" style="width: 22rem">
             <img
               src="https://source.unsplash.com/300x150/?cryptography,encryption"
               class="card-img-top image-aline-center"
@@ -94,8 +94,9 @@
             </div>
           </div>
         </div>
+        <br />
         <div class="col-md-4">
-          <div class="card" style="width: 21rem">
+          <div class="card" style="width: 22rem">
             <img
               src="https://source.unsplash.com/300x150/?machinelearning,datascience"
               class="card-img-top image-aline-center"
@@ -105,7 +106,7 @@
               <h5 class="card-title">Machine Learning</h5>
               <p class="card-text">
                 Predict the Selling Price for Old car based on purchase price
-                and fuel type and more.
+                and fuel type.
               </p>
               <a
                 href="https://github.com/manthanp1012/Car_Price_Prediction/tree/master"
@@ -115,8 +116,9 @@
             </div>
           </div>
         </div>
+        <br />
         <div class="col-md-4">
-          <div class="card" style="width: 21rem">
+          <div class="card" style="width: 22rem">
             <img
               src="https://source.unsplash.com/300x150/?API,temperature,weather"
               class="card-img-top image-aline-center"
